Update HTML meta tag imageUrl to use smaller Rocky image for Base Build console display

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Base Mini App Metadata -->
     <meta name="fc:miniapp" content='{
       "version":"next",
-      "imageUrl":"https://res.cloudinary.com/dg5qvbxjp/image/upload/v1760901429/rockydevcon_zfegi7.jpg",
+      "imageUrl":"https://res.cloudinary.com/dg5qvbxjp/image/upload/v1760903454/rockysizesmall_yqpkig.png",
       "button":{
         "title":"View Schedule",
         "action":{
