Fix embed metadata URL consistency - use www.craycray.xyz in fc:miniapp meta tag
- Update URL in fc:miniapp meta tag to match manifest homeUrl
- Ensure consistent domain references across all embed metadata
- This should improve embed rendering and sharing functionality

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         "action":{
           "type":"launch_miniapp",
           "name":"Rocky Event Schedule",
-          "url":"https://craycray.xyz/"
+          "url":"https://www.craycray.xyz/"
         }
       }
     }' />
