Fix embed metadata per Base migration guide - use launch_miniapp and proper PNG format
- Change button.action.type back to 'launch_miniapp' as specified in Base migration docs
- Add f_png format parameter to Cloudinary URLs to ensure PNG format
- Maintain 3:2 aspect ratio (600x400) for embed images as required
- Remove extra action properties that aren't in the migration guide example
- Ensure consistency between fc:miniapp meta tag and manifest imageUrl

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     
     <!-- Base Mini App Metadata -->
     <meta name="fc:miniapp" content='{
-      "version":"next",
-      "imageUrl":"https://res.cloudinary.com/dg5qvbxjp/image/upload/v1760903454/rockysizesmall_yqpkig.png",
-      "button":{
-        "title":"View Schedule",
-        "action":{
-          "type":"launch_miniapp",
-          "name":"Rocky Event Schedule",
-          "url":"https://www.craycray.xyz/"
+      "version": "next",
+      "imageUrl": "https://res.cloudinary.com/dg5qvbxjp/image/upload/ar_1.5,c_crop,w_600,h_400,f_png/v1760903454/rockysizesmall_yqpkig.png",
+      "button": {
+        "title": "View Schedule",
+        "action": {
+          "type": "launch_miniapp",
+          "url": "https://www.craycray.xyz/",
+          "name": "Rocky Event Schedule"
         }
       }
     }' />
