Fix sdk.actions.ready() call per Base migration guide
- Remove disableNativeGestures parameter to match Base migration guide exactly
- Follow the React useEffect pattern but without extra parameters
- Maintain error handling and debugging but simplify the ready() call
- This should resolve any SDK ready issues and match Base documentation

--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                 console.log('SDK actions available:', sdk && sdk.actions ? 'Yes' : 'No');
                 
                 if (sdk && sdk.actions && typeof sdk.actions.ready === 'function') {
-                    console.log('🚀 Calling sdk.actions.ready({ disableNativeGestures: true })...');
-                    await sdk.actions.ready({ disableNativeGestures: true });
+                    console.log('🚀 Calling sdk.actions.ready() - following Base migration guide pattern...');
+                    await sdk.actions.ready();
                     console.log('✅ sdk.actions.ready() called successfully!');
                     return true;
                 } else {
