Update to new Blocky Rock Character with Grin image
- Replace all Rocky character image references with new v1760906596 image
- Update manifest: imageUrl, splashImageUrl, heroImageUrl, ogImageUrl, screenshotUrls
- Update HTML embed metadata in index.html and landing.html
- Maintain proper Cloudinary transformations for Base Mini App compatibility
- Keep existing iconUrl unchanged for app icon consistency

--- a/landing.html
+++ b/landing.html
@@ -9,7 +9,7 @@
     <!-- Base Mini App Metadata -->
     <meta name="fc:miniapp" content='{
       "version":"next",
-      "imageUrl":"https://res.cloudinary.com/dg5qvbxjp/image/upload/v1760903454/rockysizesmall_yqpkig.png",
+      "imageUrl":"https://res.cloudinary.com/dg5qvbxjp/image/upload/ar_1.5,c_crop,w_600,h_400,f_png/v1760906596/Blocky_Rock_Character_with_Grin_eqxbgq.png",
       "button":{
         "title":"View Schedule",
         "action":{
