Fix embed metadata per Base docs - correct aspect ratios and action types
Follow Base embeds documentation requirements:
- Change button.action.type from 'launch_miniapp' to 'launch_frame' as required
- Fix imageUrl to use proper 3:2 aspect ratio (ar_3:2,c_crop,w_1200,h_800)
- Fix splashImageUrl to exactly 200x200 pixels (w_200,h_200,c_crop)
- Add splashImageUrl and splashBackgroundColor to button.action
- Update both index.html and landing.html fc:miniapp metadata
- Update manifest splashImageUrl to 200x200 specification

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <!-- Base Mini App Metadata -->
     <meta name="fc:miniapp" content='{
       "version": "next",
-      "imageUrl": "https://res.cloudinary.com/dg5qvbxjp/image/upload/ar_1.5,c_crop,w_600,h_400,f_png/v1760906596/Blocky_Rock_Character_with_Grin_eqxbgq.png",
+      "imageUrl": "https://res.cloudinary.com/dg5qvbxjp/image/upload/ar_3:2,c_crop,w_1200,h_800,f_png/v1760906596/Blocky_Rock_Character_with_Grin_eqxbgq.png",
       "button": {
         "title": "View Schedule",
         "action": {
-          "type": "launch_miniapp",
+          "type": "launch_frame",
           "url": "https://www.craycray.xyz/",
-          "name": "Rocky Event Schedule"
+          "name": "Rocky Event Schedule",
+          "splashImageUrl": "https://res.cloudinary.com/dg5qvbxjp/image/upload/w_200,h_200,c_crop,f_png/v1760906596/Blocky_Rock_Character_with_Grin_eqxbgq.png",
+          "splashBackgroundColor": "#D4AF37"
         }
       }
     }' />
@@ -25,7 +27,7 @@
       "name":"Rocky - Event Schedule",
       "iconUrl":"https://res.cloudinary.com/dg5qvbxjp/image/upload/v1760905818/ChatGPT_Image_Oct_19_2025_at_05_29_51_PM_aizk0e.png",
       "homeUrl":"https://www.craycray.xyz/",
-      "imageUrl":"https://res.cloudinary.com/dg5qvbxjp/image/upload/ar_1.5,c_crop,w_600,h_400,f_png/v1760906596/Blocky_Rock_Character_with_Grin_eqxbgq.png",
+      "imageUrl":"https://res.cloudinary.com/dg5qvbxjp/image/upload/ar_3:2,c_crop,w_1200,h_800,f_png/v1760906596/Blocky_Rock_Character_with_Grin_eqxbgq.png",
       "buttonTitle":"Launch App",
       "description":"DevConnect Event Concierge - Your personal event schedule",
       "primaryCategory":"utility"
