--- a/landing.html
+++ b/landing.html
@@ -9,13 +9,15 @@
     <!-- Base Mini App Metadata -->
     <meta name="fc:miniapp" content='{
       "version":"next",
-      "imageUrl":"https://res.cloudinary.com/dg5qvbxjp/image/upload/ar_1.5,c_crop,w_600,h_400,f_png/v1760906596/Blocky_Rock_Character_with_Grin_eqxbgq.png",
+      "imageUrl":"https://res.cloudinary.com/dg5qvbxjp/image/upload/ar_3:2,c_crop,w_1200,h_800,f_png/v1760906596/Blocky_Rock_Character_with_Grin_eqxbgq.png",
       "button":{
         "title":"View Schedule",
         "action":{
-          "type":"launch_miniapp",
+          "type":"launch_frame",
           "name":"Rocky Event Schedule",
-          "url":"https://craycray.xyz/"
+          "url":"https://www.craycray.xyz/",
+          "splashImageUrl": "https://res.cloudinary.com/dg5qvbxjp/image/upload/w_200,h_200,c_crop,f_png/v1760906596/Blocky_Rock_Character_with_Grin_eqxbgq.png",
+          "splashBackgroundColor": "#D4AF37"
         }
       }
     }' />
