Fix button action type back to launch_miniapp
- Change button.action.type from 'launch_frame' back to 'launch_miniapp' as required
- Update both index.html and landing.html fc:miniapp metadata
- Ready() call timing is correct - called in app init after setup but before data fetching

--- a/landing.html
+++ b/landing.html
@@ -13,7 +13,7 @@
       "button":{
         "title":"View Schedule",
         "action":{
-          "type":"launch_frame",
+          "type":"launch_miniapp",
           "name":"Rocky Event Schedule",
           "url":"https://www.craycray.xyz/",
           "splashImageUrl": "https://res.cloudinary.com/dg5qvbxjp/image/upload/w_200,h_200,c_crop,f_png/v1760906596/Blocky_Rock_Character_with_Grin_eqxbgq.png",
