--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       "button": {
         "title": "View Schedule",
         "action": {
-          "type": "launch_frame",
+          "type": "launch_miniapp",
           "url": "https://www.craycray.xyz/",
           "name": "Rocky Event Schedule",
           "splashImageUrl": "https://res.cloudinary.com/dg5qvbxjp/image/upload/w_200,h_200,c_crop,f_png/v1760906596/Blocky_Rock_Character_with_Grin_eqxbgq.png",
