Fix fc:miniapp embed metadata validation issues
CRITICAL FIXES based on Base documentation:
- Change button.action.type from 'launch_miniapp' to 'launch_frame' (required by spec)
- Compact JSON formatting to prevent parsing issues causing 'not set' errors
- Ensure all required fields are properly formatted per docs.base.org

This should resolve the validation errors:
- version: 'not set' -> now properly set as 'next'
- button: 'not set' -> now properly formatted with all required fields

--- a/index.html
+++ b/index.html
@@ -7,20 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     
     <!-- Base Mini App Metadata -->
-    <meta name="fc:miniapp" content='{
-      "version": "next",
-      "imageUrl": "https://res.cloudinary.com/dg5qvbxjp/image/upload/ar_3:2,c_crop,w_1200,h_800,f_png/v1760906596/Blocky_Rock_Character_with_Grin_eqxbgq.png",
-      "button": {
-        "title": "View Schedule",
-        "action": {
-          "type": "launch_miniapp",
-          "url": "https://www.craycray.xyz/",
-          "name": "Rocky Event Schedule",
-          "splashImageUrl": "https://res.cloudinary.com/dg5qvbxjp/image/upload/w_200,h_200,c_crop,f_png/v1760906596/Blocky_Rock_Character_with_Grin_eqxbgq.png",
-          "splashBackgroundColor": "#D4AF37"
-        }
-      }
-    }' />
+    <meta name="fc:miniapp" content='{"version":"next","imageUrl":"https://res.cloudinary.com/dg5qvbxjp/image/upload/ar_3:2,c_crop,w_1200,h_800,f_png/v1760906596/Blocky_Rock_Character_with_Grin_eqxbgq.png","button":{"title":"View Schedule","action":{"type":"launch_frame","url":"https://www.craycray.xyz/","name":"Rocky Event Schedule","splashImageUrl":"https://res.cloudinary.com/dg5qvbxjp/image/upload/w_200,h_200,c_crop,f_png/v1760906596/Blocky_Rock_Character_with_Grin_eqxbgq.png","splashBackgroundColor":"#D4AF37"}}}' />
     
     <!-- Frame metadata for Base embed rendering -->
     <meta name="fc:frame" content='{
