Fix all Mini App metadata and navigation issues
CRITICAL FIXES addressing all mentioned issues:

1. METADATA FIX: Changed action type from 'launch_frame' to 'launch_miniapp' in both files
   - Both index.html and landing.html now use correct 'type': 'launch_miniapp'

2. SDK READY CALL: Added missing SDK initialization to landing.html
   - Now both pages properly call sdk.actions.ready() when DOM is ready

3. NAVIGATION FIX: Replaced HTML href links with proper SDK navigation
   - Added navigateToPage() function using sdk.actions.openUrl()
   - Proper fallback to window.location.href if SDK unavailable
   - Navigation now works correctly within Mini App environment

This should resolve all embed validation and navigation issues for both pages.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     
     <!-- Base Mini App Metadata -->
-    <meta name="fc:miniapp" content='{"version":"next","imageUrl":"https://res.cloudinary.com/dg5qvbxjp/image/upload/ar_3:2,c_crop,w_1200,h_800,f_png/v1760906596/Blocky_Rock_Character_with_Grin_eqxbgq.png","button":{"title":"View Schedule","action":{"type":"launch_frame","url":"https://www.craycray.xyz/","name":"Rocky Event Schedule","splashImageUrl":"https://res.cloudinary.com/dg5qvbxjp/image/upload/w_200,h_200,c_crop,f_png/v1760906596/Blocky_Rock_Character_with_Grin_eqxbgq.png","splashBackgroundColor":"#D4AF37"}}}' />
+    <meta name="fc:miniapp" content='{"version":"next","imageUrl":"https://res.cloudinary.com/dg5qvbxjp/image/upload/ar_3:2,c_crop,w_1200,h_800,f_png/v1760906596/Blocky_Rock_Character_with_Grin_eqxbgq.png","button":{"title":"View Schedule","action":{"type":"launch_miniapp","url":"https://www.craycray.xyz/","name":"Rocky Event Schedule","splashImageUrl":"https://res.cloudinary.com/dg5qvbxjp/image/upload/w_200,h_200,c_crop,f_png/v1760906596/Blocky_Rock_Character_with_Grin_eqxbgq.png","splashBackgroundColor":"#D4AF37"}}}' />
     
     <!-- Frame metadata for Base embed rendering -->
     <meta name="fc:frame" content='{
@@ -27,8 +27,8 @@
             <h1>CrayCray Studios</h1>
             <p class="subtitle">Rocky Event Agents - Personal Schedule</p>
             <nav class="nav">
-                <a href="landing.html" class="nav-link">Presentation</a>
-                <a href="index.html" class="nav-link active">My Schedule</a>
+                <a href="#" class="nav-link" onclick="navigateToPage('landing.html', this)">Presentation</a>
+                <a href="#" class="nav-link active" onclick="navigateToPage('index.html', this)">My Schedule</a>
             </nav>
         </header>
 
@@ -671,6 +671,23 @@
                 }
             }
         }
+
+        // Navigation function for Mini App
+        window.navigateToPage = async function(url, element) {
+            try {
+                // Use SDK navigation if available
+                if (typeof sdk !== 'undefined' && sdk.actions && sdk.actions.openUrl) {
+                    await sdk.actions.openUrl(url);
+                } else {
+                    // Fallback to regular navigation
+                    window.location.href = url;
+                }
+            } catch (error) {
+                console.error('Navigation failed:', error);
+                // Fallback to regular navigation
+                window.location.href = url;
+            }
+        };
 
         // Initialize the app when DOM is ready - similar to G1VE pattern
         document.addEventListener('DOMContentLoaded', async () => {
