--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CrayCray Studios - Rocky Event Agents</title>
+    <title>CrayCray - Rocky Event Agents</title>
     
     <!-- Base Mini App Metadata -->
     <meta name="fc:miniapp" content='{
